Collections Page code added

--- a/frontend/src/styles/product.css
+++ b/frontend/src/styles/product.css
@@ -2,3 +2,8 @@
  .detail-container {
     height: 72px;
   }
+
+  .no-link-spacing {
+    margin: 0 !important; /* Use !important if needed to override other styles */
+    padding: 0 !important;
+  }
